--- a/commands.html
+++ b/commands.html
@@ -43,8 +43,19 @@
             </div>
         </div>
     </div>
-    <div class="table-responsive command-table">
-        <table class="table table-striped commands">
+    <div class="table-responsive">
+        <table class="table table-striped table-hover commands">
+            <caption class="text-center">
+                <details>
+                    <summary>Súgó</summary>
+                    <table class="table legend">
+                        <tr>
+                            <th>*</th>
+                            <td>Csak egyes funkciókhoz</td>
+                        </tr>
+                    </table>
+                </details>
+            </caption>
             <thead>
                 <tr>
                     <th scope="col" class="command-column">Parancs</th>
@@ -416,10 +427,10 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
                     <div class="row">
-                        <div class="col-12"><a href="#top">Vissza a tetejére</a></div>
+                        <div class="col-12"><p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a></p></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a></p></div>
+                        <div class="col-12"><p id="version">...</p></div>
                     </div>
                 </div>
             </div>
