--- a/commands.html
+++ b/commands.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="media/icon.png">
+    <link rel="icon" href="media/icon_transparent_outlined.png">
     <title>Parancsok - sasOS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3b3f778d59.js" crossorigin="anonymous"></script>
@@ -55,7 +55,7 @@
                             <tr data-command="example">
                                 <td>parancs<br>● alparancs <code>paraméter1</code> <code class="optional">paraméter2</code></td>
                                 <td>Ez egy példa parancs.</td>
-                                <td>Ez a jogosultság/állapot kell a parancs használatához<br>*csak egyes funkciókhoz</td>
+                                <td>Ez a jogosultság/állapot kell a parancshoz<br><b>*csak egyes funkciókhoz</b></td>
                             </tr>
                         </table>
                     </details>
@@ -317,7 +317,7 @@
                     </tr>
                     <tr data-command="ascii generic">
                         <td>ascii <code>szöveg</code> <code class="optional">betűtípus</code> <code class="optional">megjelenítés</code></td>
-                        <td>Beírt szöveg ASCII-képpé alakítása, opcionálisan betűtípus választással: https://pastebin.com/AVsvB8Ju.</td>
+                        <td>Beírt szöveg ASCII-képpé alakítása, opcionálisan betűtípus választással: <a href="https://pastebin.com/AVsvB8Ju" target="_blank">https://pastebin.com/AVsvB8Ju</a>.</td>
                         <td>-</td>
                     </tr>
                     <tr data-command="avatár generic">
@@ -432,10 +432,10 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
                     <div class="row">
-                        <div class="col-12"><p class="footer-links"><a href="#top">Vissza a tetejére</a> | <a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a></p></div>
+                        <div class="col-12"><p class="footer-links"><a href="#top">Vissza a tetejére</a></p></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><p id="version">...</p></div>
+                        <div class="col-12"><p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |</p><p id="version">...</p></div>
                     </div>
                 </div>
             </div>
