--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="media/icon.png">
+    <link rel="icon" href="media/icon_transparent_outlined.png">
     <title>Főoldal - sasOS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3b3f778d59.js" crossorigin="anonymous"></script>
@@ -137,10 +137,10 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
                     <div class="row">
-                        <div class="col-12"><p class="footer-links"><a href="#top">Vissza a tetejére</a> | <a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a></p></div>
+                        <div class="col-12"><p class="footer-links"><a href="#top">Vissza a tetejére</a></p></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><p id="version">...</p></div>
+                        <div class="col-12"><p class="footer-links"><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> | <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |</p><p id="version">...</p></div>
                     </div>
                 </div>
             </div>
