--- a/commands/miscellaneous/szóharc.html
+++ b/commands/miscellaneous/szóharc.html
@@ -339,14 +339,19 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-10 col-sm-10 col-md-8 col-lg-7 col-xl-5 mb-4 py-4 tabcontent command-info anim">
-                    <h3 class="command">Paraméterek</h3>
+                    <h3 class="command">Alparancsok</h3>
                     <hr>
                     <ul>
-                        <li>
-                            <p class="param"><code class="optional">szó</code>: A harcba állított szavad (üres: játékszabály megjelenítése)</p>
+                        <li class="subcommand">
+                            <p class="param"><b>Játék</b>: Epikus szóharc</p>
+                            <ul>
+                                <li>
+                                    <p class="param"><code>szó</code>: A harcba állított szavad | <b>Kötelező</b></p>
+                                </li>
+                            </ul>
                         </li>
-                        <li>
-                            <p class="param"><code class="optional">megjelenítés</code>: Megjelenítés mindenki számára (üres: csak magadnak)</p>
+                        <li class="subcommand">
+                            <p class="param"><b>Súgó</b>: Játékszabályok megjelenítése</p>
                         </li>
                     </ul>
                 </div>
